<resources>
    <string name="app_name">MagLock</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lock">Lock</string>
    <string name="refresh">Refresh</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>
    <string name="no_name">-no name-</string>
    <string name="bt_not_enabled_leaving">Permission Denied - Leaving.</string>
    <string name="empty_list">Nothing</string>
    <string name="already_scanning">Scanning...</string>
    <string name="last_seen">Last seen</string>
    <string name="just_now">just now</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minute_ago">minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_service">Unkown Service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>
    <string name="searchactivityname">Search Activity</string>
    <string name="startactivityname">Start MagLock</string>
    <string name="bluetoothswitchtext">Bluetooth</string>
    <string name="lock_symbol">Lock Symbol</string>
    <string name="device_name">Device Name -</string>
    <string name="unnamed">\?????</string>
    <string name="battery_level">Battery Level -</string>
    <string name="no_battery">\??</string>
    <string name="heart_rate">Heart Rate -</string>
    <string name="no_heartrate">\??</string>
    <string name="led">LED:</string>
    <string name="extra">Extra:</string>
    <string name="to_do">TODO</string>

    <string name="test_popup_done">Test popup \n-
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel elementum velit. Nunc elementum massa eu arcu tincidunt, at condimentum odio egestas. Nunc id congue dui, eget mattis mi. Donec venenatis id arcu vel varius. Nullam viverra a mi quis dapibus. Sed eu mollis augue, vestibulum consequat purus. Nam eget tempor arcu. Maecenas in maximus neque. Integer tincidunt, est quis suscipit faucibus, augue magna elementum mi, ut vehicula sem lacus ut magna. Ut placerat dapibus pellentesque. Duis bibendum metus id nisl malesuada finibus. Sed quis aliquam elit, nec placerat nunc.

Nullam quam eros, dignissim quis erat ut, fringilla volutpat metus. Quisque in risus porta, scelerisque eros ut, fermentum odio. Sed tincidunt egestas lorem, in ultricies neque scelerisque id. Nam id lorem nisl. Proin vulputate auctor nunc vel imperdiet. In non felis sed eros dictum maximus. Nunc varius risus metus. Suspendisse quis lobortis nibh. In est velit, suscipit id enim ut, consectetur interdum ante. Sed maximus orci neque, sed accumsan velit aliquet ut. Suspendisse pharetra, ipsum nec mattis gravida, quam arcu facilisis ligula, eget molestie dolor risus vehicula sapien. Mauris id est convallis, blandit arcu in, malesuada ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis venenatis lectus mattis nibh placerat scelerisque.

Curabitur nisi massa, aliquam in purus vel, porta pretium est. Fusce rutrum egestas mi a imperdiet. Proin ante dui, ultricies hendrerit maximus at, bibendum sit amet elit. Morbi ut elit blandit, eleifend magna eget, finibus erat. Praesent at interdum lacus. Aliquam tristique bibendum massa in sollicitudin. Fusce nec convallis velit. Aliquam sagittis convallis diam a facilisis. Nunc aliquet quis neque a consectetur. Maecenas mi ante, semper ut viverra sit amet, tincidunt eget erat. Vestibulum id hendrerit lectus, sed imperdiet dolor. Donec congue nunc sit amet sapien aliquet gravida. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse tincidunt ut quam quis tincidunt. Cras nibh lectus, mollis a mollis pretium, suscipit ac ex. Morbi congue accumsan orci eget consectetur.

In cursus, neque vitae fringilla fringilla, ipsum diam malesuada eros, vitae luctus risus dolor nec purus. Morbi feugiat efficitur neque, vitae porta ante iaculis non. Ut at risus id purus eleifend ultrices eget quis metus. Pellentesque vulputate sit amet augue nec consectetur. Nunc bibendum mattis massa ut gravida. Duis sit amet velit ut tortor congue dapibus in in purus. Nam venenatis mi id massa dapibus condimentum. Morbi ultrices consequat vulputate.

Phasellus in tempor felis, semper cursus arcu. Morbi feugiat vehicula nisl id tincidunt. Aenean euismod nisl sed tempus gravida. Morbi fringilla vehicula lectus, a malesuada sapien. Vestibulum sed leo venenatis, pellentesque arcu id, condimentum ante. Curabitur sit amet leo vel nulla euismod tempor et sit amet eros. Quisque commodo orci eget sapien congue faucibus. Aliquam mi sem, auctor nec blandit non, pulvinar ac enim. Proin ut laoreet purus, ac cursus felis. Sed tortor nulla, posuere in lacus quis, molestie ultrices elit. Pellentesque et aliquet nisi. Nunc erat ligula, posuere eu neque id, pharetra malesuada ex. Mauris maximus gravida nulla, et consequat elit auctor at. Curabitur finibus ullamcorper mauris, a vestibulum libero semper at. Aenean viverra porta sapien, fringilla commodo nulla cursus eget.
        Done!</string>
    <string name="event_log">Event Log</string>
    <string name="channel_name">test_channel</string>
    <string name="channel_description">A channel for testing purposes</string>
</resources>
